docs/book/samples/ch02/rebind_check.out
error[unused]: unused binding: each version of `x` is used before the next
  --> rebind_check.kso:2:3
   2 |   x = 1
         ^
